add controll_stage.py and a few changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <h1>{{ message }}</h1>
     <h2>
     <ul>
-      <li><a href="/controll/home">controll</a></li>
+      <li><a href="/controll_stage/home">controll_stage</a></li>
       <li><a href="/messure_osiro/home">messure_osiro</a></li>
       <li>Peter Conrad</li>
       <li>Edgar Mitchell</li>
