--- a/templates/controll_stage.html
+++ b/templates/controll_stage.html
@@ -4,12 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flask App</title>
+  <title>stage変更</title>
+  <link rel="stylesheet" href="{{ url_for( "static",filename="defalut.css" ) }}">
+
 </head>
 
 <body>
   <h1>This is controll_stage.</h1>
-  <h2><a href="/">homeに戻る</a></h2>
+  <div class=""></div>
+  <h2><a href={{ url_for('home') }}>homeに戻る</a></h2>
 </body>
 
 </html>
