--- a/templates/controll_stage.html
+++ b/templates/controll_stage.html
@@ -11,7 +11,7 @@
   <script>
     async function cheak_status() {
       //　鯖から状態をもらってくる
-      const status_cheak = await post_json('{{url_for("api.ct_stage_op")}}', JSON.stringify({ mode: "cheak" }))
+      const status_cheak = await post_json('{{url_for("api.ct_stage_op")}}', JSON.stringify({ mode: "dev" }))
       console.log(status_cheak)
       is_op=status_cheak.is_op
       change_status_message(is_op)
